# universe-generator

./: .clang-format  .git-blame-ignore-revs  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  EXPERIMENTS_QUEUE.md  INVESTIGATION_menger.md  PHYSICS_FINDINGS.md  PHYSICS_MAPPING_TODO.md  README.md  SUMMARY.md  TODO.md  TODO_corrdim.md  analyze_campaign.py  analyze_correlation_dim.py  analyze_knots.py  analyze_spectral_dims.py  analyze_turnaround.py  analyze_velocity.py  attempts_overlay.py  braid_overlay.py  campaign.sh  coupon_cells.py  dist_campaign.sh  gpu_2d_nyquist.sh  gpu_2d_safefull.sh  gpu_campaign.sh  gpu_capvariants.sh  gpu_nyquist.sh  gpu_phase2.sh  gpu_restart.sh  index.html  make_report.py  multi_t_bracket.py  overnight.sh  plot_angle_compare.py  plot_campaign.py  plot_nvt.py  pyproject.toml  (+2 more)
analysis/: analyze_approach_law.py  analyze_box_geometry.py  analyze_braids.py  analyze_collision_geometry.py  analyze_eos_history.py  analyze_freq_parity.py  analyze_gap_prediction.py  analyze_jam_scaling.py  analyze_multiterm_reach.py  analyze_periodic_corrdim.py  analyze_phase_kinematics.py  analyze_precision.py  analyze_spacetime_4d.py  analyze_spacetime_dim.py  analyze_uniformity_over_time.py  analyze_wave_test.py  analyze_wiggle_reach.py  compare_jamming.py
braid_solver/: README.md  braid_greedy.py  braid_highdim.py  fastclique.py  freq_strategy_test.py  jamming_kinetics.py  solve_braid.py  verify_numeric.py
braidlab/: CAMPAIGN_corrdim2d.md  ORCHESTRATOR.md  __init__.py  __main__.py  analyze.py  campaigns.py  cli.py  config.py  corrdim.py  engine.py  leaderboard.py  (+4 more)
(+82 files in other folders)
