[project]
name = "braidlab"
version = "0.1.0"
description = "RSA jamming measurement suite for the braided-universe model"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.15.3",
]

[project.scripts]
braidlab = "braidlab.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["braidlab"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
include = ["braidlab", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
